[package]
name = "wanipaper"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.13.0"
drm-fourcc = "2.2.0"
font-kit = "0.11.0"
image = "0.24"
env_logger = "0.10"
wgpu = "0.19.0"
raqote = "0.8.2"
raw-window-handle = "0.6.0"
pollster = "0.3.0"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.11"
