[package]
name = "wanipaper"
version = "1.0.0"
edition = "2024"

[dependencies]
image = "0.25.6"
env_logger = "0.10"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.11"
cgmath = "0.18.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
rand = "0.9.2"
nix = { version = "0.30.1", features = ["event", "mman"] }
